templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recognition-model-deployment
  namespace: f1-platform
spec:
  replicas: 1
  selector:
    matchLabels:
      app: recognition-model-app
  template:
    metadata:
      labels:
        app: recognition-model-app
    spec:
      containers:
        - name: recognition-model-app
          image: f1-recognition-model:v0.7
          imagePullPolicy: Never
          ports:
            - containerPort: 8000
          livenessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10
          readinessProbe:
            tcpSocket:
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 10 
          command: ["python", "-m", "main.py"]
          args: ["--minio-url", "$(MINIO_URL)", "--access-key", "$(MINIO_ACCESS_KEY)", "--secret-key", "$(MINIO_SECRET_ACCESS_KEY)", "--debugging-local", "$(DEBUGGING_LOCAL)"]
