templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recognition-model-service
  namespace: f1-platform
spec:
  type: NodePort
  selector:
    app: recognition-model-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8000
      name: http
